kyverno/pod/pod-001.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001
  namespace: default
  labels:
    app: nginx
    cloud.example.com/dc: west
    cloud.example.com/env: sandbox
spec:
    containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
      - containerPort: 80
