kyverno/pod/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001
  namespace: default
  labels:
    app: nginx
    cloud.example.com/dc: $(dc)
    cloud.example.com/env: $(env)
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
