kyverno/pod/kyverno-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
resources:

spec:
  template: true
  bindings:
    - name: dc
      value: west
    - name: env
      value: sandbox
  steps:
    - try:
      - assert:
          resource:
            apiVersion: v1
            kind: Deployment
            metadata:
              name: coredns
              namespace: kube-system
            spec:
              replicas: 1
